--- a/app/styles/_base.styl
+++ b/app/styles/_base.styl
@@ -10,7 +10,7 @@ html
 
 body
   //background linear-gradient(#105d7f 1%,#305778 2%,#63b5ce 55%,#63b5ce 99%,#70caff 100%)
-  background radial-gradient(circle, #c03d43 0%, #902025 72%, #63161a 100%)
+  //background radial-gradient(circle, #c03d43 0%, #902025 72%, #63161a 100%)
   background-attachment fixed
   margin 0
   height 100%
