--- a/app/styles/formula-inputs.styl
+++ b/app/styles/formula-inputs.styl
@@ -12,40 +12,39 @@
     &.checkboxes
       margin-top 0
 
-  input[type='checkbox']
-    opacity 0
-    position absolute
-    width 200px
-    left 41%
-    max-height none
-    height 35px
-    z-index 1
-    cursor pointer
+  .checkbox
+    margin 0 auto
+    width 50%
 
-    &+label
-      display block
-      position relative
-      left 41%
-      height field-height - 20
-      text-align left
-      padding 5px 0
-      color #888
-      transition all ease 0.5s
-      z-index 0
+    input[type='checkbox']
+      position absolute
+      left 0
+      width 100%
+      height 25px
+      z-index 1
+      cursor pointer
 
-      &:before
-        margin-right 10px
-        content '\2713'
-        color lighten(green, 30%)
-        opacity 0
+      &+label
+        display block
+        height field-height - 20
+        padding 5px 0
+        color #888
+        transition all ease 0.5s
+        z-index 0
 
-    &:hover+label
-      color #000
+        &:before
+          margin-right 10px
+          content '\2713'
+          color lighten(green, 30%)
+          opacity 0
 
-    &:checked+label
-      color #000
-      &:before
-        opacity 1
+      &:hover+label
+        color #000
+
+      &:checked+label
+        color #000
+        &:before
+          opacity 1
 
   input, textarea, button
     font-size inherit
@@ -71,10 +70,10 @@
 
     &~label
       display block
-      padding label-padding 0
+      padding label-padding
       height label-height
       margin-top -1 * field-height - 3px
-      text-align center
+      margin-left 30px
       position relative
       top 0px
       cursor text
@@ -129,10 +128,11 @@
 
     &~label
       position absolute
+      padding-top 0
+      padding-bottom 0
       width 100%
-      padding 0
+      margin-left 0
       margin-top 15px
-      text-align center
 
   button
     display block
