--- a/app/styles/_vars.styl
+++ b/app/styles/_vars.styl
@@ -5,7 +5,7 @@ label-padding          = 10px
 input-group-margin-top = 70px
 header-height          = 300px
 
-ff-padding-top         = 100px
+ff-padding-top         = 0
 ff-padding-right       = 30px
 ff-padding-bottom      = 30px
 ff-padding-left        = 30px
