--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -120,16 +120,19 @@ section.sidebar
     box-sizing border-box
     display table-cell
     vertical-align middle
+    max-width 820px
 
     h2
       text-align left
 
   .next-btn
-    width 100%
     text-align center
 
     position absolute
-    bottom 0
+    width 300px
+    bottom 50px
+    left calc(50% - 150px)
+    padding 10px 0
 
     background white
     z-index 2
